Organized code Fixed Findbugs errors